--- a/style.css
+++ b/style.css
@@ -8,11 +8,26 @@ body {
 }
  
 
-h1 {
-    padding-left: 90px;
-    margin-top: 150px;
-    font-size: 50px;
+.container2 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 90px;
+    margin-top: 100px;
+    gap: 0px;
+}
 
+.button {
+    margin: 0 0 2px 0;
+    font-size: 30px;
+    color: #ffffff;
+    background-color: rgb(0, 0, 0);
+    border-radius: 6px;
+}
+
+h1 {
+    margin: 0;
+    font-size: 50px;
 }
 
 .row {
@@ -31,4 +46,23 @@ h4 {
     margin-left: 90px;
     margin-top: 2px; 
     margin-bottom: 0px;
+}
+
+
+h5 {
+    margin-left: 90px;
+    margin-top: 0px; 
+    margin-bottom: 0px;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.container1 {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
 }
