--- a/style.css
+++ b/style.css
@@ -66,3 +66,35 @@ h5 {
     flex-direction: column;
     gap: 4px;
 }
+
+.row2 {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    margin-top: 100px;
+    margin-left: 700px;
+    top: 20px;      
+    right: 400px;    
+    font-size: 16px;
+    position: absolute;
+    color: white;
+    background-color: black;
+}
+
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+}
+.text1 {
+    position: absolute;
+    top: 110px;
+    right: 300px;
+    font-size: 24px;
+    color: black;
+}
