--- a/style.css
+++ b/style.css
@@ -23,11 +23,13 @@ body {
     color: #ffffff;
     background-color: rgb(0, 0, 0);
     border-radius: 6px;
+    padding: 12px 20px;
 }
 
 h1 {
     margin: 0;
     font-size: 50px;
+    font-family: sans-serif;
 }
 
 .row {
@@ -40,12 +42,14 @@ h2 {
     margin-left: 90px;
     margin-bottom: 2px; 
     margin-top: 0px;
+    font-family: sans-serif;
 }
 
 h4 {
     margin-left: 90px;
     margin-top: 2px; 
     margin-bottom: 0px;
+    font-family: sans-serif;
 }
 
 
@@ -53,6 +57,7 @@ h5 {
     margin-left: 90px;
     margin-top: 0px; 
     margin-bottom: 0px;
+    font-family: sans-serif;
 }
 
 .container {
@@ -82,10 +87,6 @@ h5 {
 }
 
 
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-}
 
 .row {
     display: flex;
@@ -94,7 +95,127 @@ h5 {
 .text1 {
     position: absolute;
     top: 110px;
-    right: 300px;
+    right: 600px;
     font-size: 24px;
-    color: black;
+    color: rgb(255, 255, 255);
+    background-color: black;
+    border-radius: 6px;
+    font-family: sans-serif;
 }
+
+.p3 {
+    position: absolute;
+    top: 180px;
+    right: 250px;
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    background-color: black;
+    border-radius: 6px;
+}
+
+.button2 {
+    display: inline-block;
+    background-color: #3d63ff;
+    color: white;
+    padding: 12px 20px;
+    margin-left: 85px;
+    border-radius: 6px;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: sans-serif;
+}
+
+
+.flex-container {
+  display: flex;
+  background-color: black;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 13px;
+  color: white;
+  border-top-left-radius: 17px;
+  border-top-right-radius: 17px;
+  border-bottom: 0px;
+  padding: 20px 16px 20px 16px; 
+  align-items: flex-start;
+}
+
+.span {
+    color: powderblue;
+}
+
+img {
+    border-radius: 50%;
+    margin-left: 60;
+    
+}
+
+
+.flex-container2 {
+    display: flex;
+    flex-direction: row;
+}
+
+.flex-container h2 {
+    margin: 0 0 8px 0;
+    font-size: 20px; 
+    font-family: sans-serif;
+}
+
+.text2 {
+    margin: 0 0 0 0;
+    font-size: 13px; 
+    font-family: sans-serif;
+    color: #fff;
+    background: none;
+    padding: 0;
+}
+
+button {
+    background-color: #fff;
+    color: black;
+    border-radius: 6px;
+    font-family: sans-serif;
+}
+
+h3 {
+    color: powderblue;
+}
+
+.icon-text {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.icon-text img {
+  margin: 0;
+}
+
+.icon-text h5 {
+  margin: 0;
+}
+h5 {
+    margin: 0;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 20px;
+    color: rgb(92, 78, 78);
+    font-family: sans-serif;
+}
+
+.text {
+    color: royalblue;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    margin-left: 750px;
+    margin-top: -160px; 
+    background-color: rgb(255, 255, 255);
+}
+
