--- a/style.css
+++ b/style.css
@@ -209,13 +209,64 @@ header {
     font-family: sans-serif;
 }
 
-.text {
-    color: royalblue;
-    font-size: 24px;
-    display: flex;
-    justify-content: center;
-    margin-left: 750px;
-    margin-top: -160px; 
-    background-color: rgb(255, 255, 255);
+.services-section {
+  background-color: white;
+   border-bottom-left-radius: 17px;
+   border-bottom-right-radius: 17px;
+  padding: 25px;
+  margin-left: 735px;
+  margin-top: -160px;
 }
 
+.text {
+  font-size: 28px;
+  margin-bottom: 20px;
+  color: black;
+}
+
+.services-container {
+  display: flex;
+  gap: 16px; 
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.service-box {
+  background-color: #000;
+  color: #fff;
+  padding: 10px 8px;
+  width: 120px;
+  min-height: 90px;
+  border-radius: 10px;
+  text-align: left;
+  font-size: 13px;
+  margin: 0;
+ 
+}
+
+.p1 {
+    margin-left:  40px;
+    margin-top: -40px;
+}
+
+.service-box2 {
+  background-color: #ebdddd;
+
+  color: #000000;
+  padding: 10px 8px;
+  width: 120px;
+  min-height: 90px;
+  border-radius: 10px;
+  text-align: left;
+  font-size: 13px;
+  margin: 0;
+ 
+}
+
+.header2 {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    color: powderblue;
+}
