--- a/style.css
+++ b/style.css
@@ -1,272 +1,35 @@
-body {
-    background-color: rgb(124, 221, 221);
-}
-
 .container {
-    display: flex;
-    flex-direction: column;
+    max-width: 800px;
+    margin: 0 auto;
 }
- 
-
-.container2 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 90px;
-    margin-top: 100px;
-    gap: 0px;
+.card {
+    background-color: beige;
+    padding: 10px;
+    border: 1px solid rgb(224, 224, 132);
+    border-radius: 12px;
+    width: 300px;
 }
 
-.button {
-    margin: 0 0 2px 0;
-    font-size: 30px;
-    color: #ffffff;
-    background-color: rgb(0, 0, 0);
-    border-radius: 6px;
-    padding: 12px 20px;
-}
-
-h1 {
-    margin: 0;
-    font-size: 50px;
-    font-family: sans-serif;
-}
 
 .row {
     display: flex;
     gap: 12px;
-    
 }
 
-h2 {
-    margin-left: 90px;
-    margin-bottom: 2px; 
-    margin-top: 0px;
-    font-family: sans-serif;
+section h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: red;
 }
 
-h4 {
-    margin-left: 90px;
-    margin-top: 2px; 
-    margin-bottom: 0px;
-    font-family: sans-serif;
+body {
+    background-color: gray;
 }
 
-
-h5 {
-    margin-left: 90px;
-    margin-top: 0px; 
-    margin-bottom: 0px;
-    font-family: sans-serif;
+.card img {
+    border-radius: 12px;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.container1 {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-}
-
-.row2 {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    margin-top: 100px;
-    margin-left: 700px;
-    top: 20px;      
-    right: 400px;    
-    font-size: 16px;
-    position: absolute;
-    color: white;
-    background-color: black;
-}
-
-
-
-.row {
-    display: flex;
-    flex-direction: row;
-}
-.text1 {
-    position: absolute;
-    top: 110px;
-    right: 600px;
-    font-size: 24px;
-    color: rgb(255, 255, 255);
-    background-color: black;
-    border-radius: 6px;
-    font-family: sans-serif;
-}
-
-.p3 {
-    position: absolute;
-    top: 180px;
-    right: 250px;
-    font-size: 16px;
-    color: rgb(255, 255, 255);
-    background-color: black;
-    border-radius: 6px;
-}
-
-.button2 {
-    display: inline-block;
-    background-color: #3d63ff;
-    color: white;
-    padding: 12px 20px;
-    margin-left: 85px;
-    border-radius: 6px;
-    text-decoration: none;
-    font-weight: bold;
-    font-family: sans-serif;
-}
-
-
-.flex-container {
-  display: flex;
-  background-color: black;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 13px;
-  color: white;
-  border-top-left-radius: 17px;
-  border-top-right-radius: 17px;
-  border-bottom: 0px;
-  padding: 20px 16px 20px 16px; 
-  align-items: flex-start;
-}
-
-.span {
-    color: powderblue;
-}
-
-img {
-    border-radius: 50%;
-    margin-left: 60;
-    
-}
-
-
-.flex-container2 {
-    display: flex;
-    flex-direction: row;
-}
-
-.flex-container h2 {
-    margin: 0 0 8px 0;
-    font-size: 20px; 
-    font-family: sans-serif;
-}
-
-.text2 {
-    margin: 0 0 0 0;
-    font-size: 13px; 
-    font-family: sans-serif;
-    color: #fff;
-    background: none;
-    padding: 0;
-}
-
-button {
-    background-color: #fff;
-    color: black;
-    border-radius: 6px;
-    font-family: sans-serif;
-}
-
-h3 {
-    color: powderblue;
-}
-
-.icon-text {
-    display: flex;
+.second-section .row {
     align-items: center;
-    gap: 8px;
-}
-
-.icon-text img {
-  margin: 0;
-}
-
-.icon-text h5 {
-  margin: 0;
-}
-h5 {
-    margin: 0;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 20px;
-    color: rgb(92, 78, 78);
-    font-family: sans-serif;
-}
-
-.services-section {
-  background-color: white;
-   border-bottom-left-radius: 17px;
-   border-bottom-right-radius: 17px;
-  padding: 25px;
-  margin-left: 735px;
-  margin-top: -160px;
-}
-
-.text {
-  font-size: 28px;
-  margin-bottom: 20px;
-  color: black;
-}
-
-.services-container {
-  display: flex;
-  gap: 16px; 
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
-.service-box {
-  background-color: #000;
-  color: #fff;
-  padding: 10px 8px;
-  width: 120px;
-  min-height: 90px;
-  border-radius: 10px;
-  text-align: left;
-  font-size: 13px;
-  margin: 0;
- 
-}
-
-.p1 {
-    margin-left:  40px;
-    margin-top: -40px;
-}
-
-.service-box2 {
-  background-color: #ebdddd;
-
-  color: #000000;
-  padding: 10px 8px;
-  width: 120px;
-  min-height: 90px;
-  border-radius: 10px;
-  text-align: left;
-  font-size: 13px;
-  margin: 0;
- 
-}
-
-.header2 {
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    color: powderblue;
 }
